roles/install-app/files/rms/jd/uat/rms-server-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rms-server-uat
  namespace: rms
  labels:
    app: rms-server
    zone: uat
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: uat
      app: rms-server
  template:
    metadata:
      name: rms-server-uat
      creationTimestamp: null
      labels:
        app: rms-server
        zone: uat
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - rms-server
      nodeSelector:
        zone: uat
      securityContext:
        runAsUser: 0
      volumes:
        - name: config-volume
          configMap:
            name: rms-server-configs
            defaultMode: 420
      containers:
        - name: rms-server
          image: 10.12.107.150:80/rms-test/rms-server:2.1.1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: 200m
              memory: 1Gi
          volumeMounts:
            - name: config-volume
              mountPath: /opt/RMSServer_linux/Config
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - '40'
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: rms-server
  namespace: rms
  annotations:
    prometheus.io/http-probe: "true"
    prometheus.io/http-probe-port: "8080"
    prometheus.io/http-probe-path: "/viability"

    prometheus.io/scrape: "true"
    prometheus.io/port: '8080'
    prometheus.io/scheme: "http"
    prometheus.io/path: '/metrics'
spec:
  selector:
    app: rms-server
  ports:
    - port: 8100
      name: port1
    - port: 8200
      name: port2
    - port: 8080
      name: web
