roles/install-app/files/rms/jd/uat/rms-ui-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rms-ui
  namespace: rms
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rms.cicem.fa`)
      kind: Rule
      services:
        - name: rms-ui
          port: 80
